--- a/Digital_image_processing_and_CV/Opencv_based/Opencv_based.vcxproj
+++ b/Digital_image_processing_and_CV/Opencv_based/Opencv_based.vcxproj
@@ -115,8 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="homework.cpp" />
     <ClCompile Include="mian.cpp" />
     <ClCompile Include="WavletTransformation.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="image_smooth.cpp" />
+    <ClInclude Include="video_player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
