--- a/Digital_image_processing_and_CV/Opencv_based/Opencv_based.vcxproj.filters
+++ b/Digital_image_processing_and_CV/Opencv_based/Opencv_based.vcxproj.filters
@@ -21,5 +21,16 @@
     <ClCompile Include="WavletTransformation.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="homework.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="video_player.hpp">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="image_smooth.cpp">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
